Container-Div im Abschnitt "Über mich" aktualisiert

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <main>
     <!-- Abschnitt: Über mich -->
     <section id="ueber-mich">
-      <div class="container">
+      <div class="container">2
         <h2>Über mich</h2>
         <p><strong>Absatz 1:</strong></p>
         <pre style="margin:0;">
